Site FP Agrícola

--- a/blog.html
+++ b/blog.html
@@ -25,7 +25,7 @@
         <div class="container mx-auto px-4">
             <div class="flex justify-between items-center">
                 <div class="flex items-center">
-                    <img src="header.png" alt="FP Agrícola Logo" class="h-10">
+                    <img src="Logo pai black.png" alt="FP Agrícola Logo" class="h-10">
                 </div>
                 <nav class="hidden md:block">
                     <ul class="flex space-x-8">
@@ -62,10 +62,9 @@
                     </div>
                     <div class="p-6">
                         <span class="inline-block px-3 py-1 bg-green-100 text-green-800 rounded-full text-xs font-semibold mb-2">Tecnologia</span>
-                        <h2 class="text-xl font-bold text-gray-800 mb-3">O que é uma roda sem ar?</h2>
-                        <p class="text-gray-600 mb-4">Entenda como a tecnologia da Shark Wheel está transformando a irrigação no campo com sua inovação em rodas sem ar que reduzem danos ao solo.</p>
-                        <a href="#" class="inline-flex items-center text-green-600 font-medium hover:text-green-800 transition">
-                            Ler mais
+                        <h2 class="text-xl font-bold text-gray-800 mb-3">O que é uma roda sem ar e por que ela está revolucionando o agronegócio?</h2>
+                        <p class="text-gray-600 mb-4">As rodas sem ar estão mudando o jogo na irrigação agrícola. Com um design inovador, a Shark Wheel elimina furos, reduz os sulcos no solo em até 55% e entrega mais eficiência no campo. Descubra como essa tecnologia premiada está revolucionando o agronegócio brasileiro.</p>
+                        <a href="rodasemar.html" class="inline-flex items-center text-green-600 font-medium hover:text-green-800 transition">Ler mais
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
                             </svg>
@@ -74,38 +73,18 @@
                 </article>
 
                 <!-- Post 2 -->
-                <article class="bg-white rounded-lg overflow-hidden shadow-md transition-all duration-300 card-hover">
+                                 <article class="bg-white rounded-lg overflow-hidden shadow-md transition-all duration-300 card-hover">
                     <div class="h-48 overflow-hidden">
-                        <img src="https://images.unsplash.com/photo-1500382017468-9049fed747ef?ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=80" 
-                             alt="Sulcos em campo agrícola" 
+                        <img src="farmin-main-banner2-e1730745606620.jpg" 
+                             alt="Roda Shark Wheel em um pivô de irrigação" 
                              class="w-full h-full object-cover">
                     </div>
                     <div class="p-6">
-                        <span class="inline-block px-3 py-1 bg-green-100 text-green-800 rounded-full text-xs font-semibold mb-2">Economia</span>
-                        <h2 class="text-xl font-bold text-gray-800 mb-3">Quanto você economiza com menos sulcos?</h2>
-                        <p class="text-gray-600 mb-4">A formação de sulcos impacta diretamente os custos de manutenção e produtividade. Descubra como reduzir até 30% dos gastos com nossa tecnologia.</p>
-                        <a href="#" class="inline-flex items-center text-green-600 font-medium hover:text-green-800 transition">
-                            Ler mais
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
-                            </svg>
-                        </a>
-                    </div>
-                </article>
-
-                <!-- Post 3 -->
-                <article class="bg-white rounded-lg overflow-hidden shadow-md transition-all duration-300 card-hover">
-                    <div class="h-48 overflow-hidden">
-                        <img src="https://images.unsplash.com/photo-1586771107445-d3ca888129ce?ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=80" 
-                             alt="Instalação da Shark Wheel" 
-                             class="w-full h-full object-cover">
-                    </div>
-                    <div class="p-6">
-                        <span class="inline-block px-3 py-1 bg-green-100 text-green-800 rounded-full text-xs font-semibold mb-2">Instalação</span>
-                        <h2 class="text-xl font-bold text-gray-800 mb-3">Como instalar a Shark Wheel em seu pivô?</h2>
-                        <p class="text-gray-600 mb-4">Veja o passo a passo completo para substituir suas rodas tradicionais em minutos e comece a aproveitar os benefícios da tecnologia sem ar.</p>
-                        <a href="#" class="inline-flex items-center text-green-600 font-medium hover:text-green-800 transition">
-                            Ler mais
+                        <span class="inline-block px-3 py-1 bg-green-100 text-green-800 rounded-full text-xs font-semibold mb-2">Tecnologia</span>
+                        <h2 class="text-xl font-bold text-gray-800 mb-3">Shark Wheel no Agronegócio: como a inovação está transformando a irrigação no Brasil</h2>
+                        <p class="text-gray-600 mb-4">A busca por eficiência e sustentabilidade no campo é cada vez mais urgente. Nesse cenário, a tecnologia Shark Wheel chega ao Brasil trazendo uma solução inovadora para pivôs de irrigação: uma roda sólida, que nunca fura e reduz em até 55% os sulcos no solo.
+        Mas afinal, o que faz essa roda ser tão diferente e por que ela já está conquistando espaço entre produtores rurais?</p>
+                        <a href="inovacaoagro.html" class="inline-flex items-center text-green-600 font-medium hover:text-green-800 transition">Ler mais
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
                             </svg>
@@ -149,7 +128,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <img src="footer.png" alt="FP Agrícola Logo" class="h-8 mb-4">
+                    <img src="Logo pai .png" alt="FP Agrícola Logo" class="h-8 mb-4">
                     <p class="text-sm">Inovação e tecnologia para o agronegócio brasileiro.</p>
                 </div>
                 <div>
